save and deploy button

--- a/src/app/home/faas/faas-manage/faas-manage.component.html
+++ b/src/app/home/faas/faas-manage/faas-manage.component.html
@@ -19,9 +19,15 @@
                 <span class="text">Edit</span>
             </button>
             <button *ngIf="edit.status" (click)="save();" type="button"
-                class="edit-button btn btn-min-width btn-dark ml-3" id="saveBtn">
+                class="edit-button btn btn-min-width btn-primary mx-3" id="saveBtn">
                 <span class="fa fa-save mr-2"></span>
                 <span class="text">Save</span>
+            </button>
+            <button *ngIf="edit.status" [disabled]="!isValidSchema"
+                (click)="save(true);edit.status=false" type="button"
+                class="edit-button btn btn-min-width btn-dark" id="sbButtonSaveAndDeploy">
+                <span class="fa fa-save mr-2"></span>
+                <span class="text">Save &amp; Deploy</span>
             </button>
         </div>
     </odp-basic-info>
