--- a/src/app/utils/code-editor/code-editor.component.html
+++ b/src/app/utils/code-editor/code-editor.component.html
@@ -1,1 +1,1 @@
-<div id="code-editor" class="h-100" style="width: 100%;min-height: 300px;"></div>
+<div id="code-editor" class="code-editor" style="width: 100%;min-height: 200px;"></div>
