--- a/src/app/home/schema-utils/manage-permissions/manage-permissions.component.scss
+++ b/src/app/home/schema-utils/manage-permissions/manage-permissions.component.scss
@@ -11,6 +11,30 @@
   min-height: 80px;
 }
 
+.description{
+  padding: 0.25rem 1.4rem 0.25rem 0.9rem !important;
+
+  &::-webkit-scrollbar {
+    width: 7px;
+  }
+  
+  /* Track */
+  
+  &::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 5px;
+  }
+  
+  /* Handle */
+  
+  &::-webkit-scrollbar-thumb {
+    background: #999ea3;
+    border-radius: 5px;
+  }
+}
+
+
+
 .field-wrapper {
   min-height: 36px;
   max-height: 36px;
