DEF1150 renamed user custom details to attributes

--- a/src/app/admin/user-list/user-manage/user-info/user-info.component.html
+++ b/src/app/admin/user-list/user-manage/user-info/user-info.component.html
@@ -96,7 +96,7 @@
                             class="details-photo rounded-circle d-flex flex-column justify-content-center align-items-center mr-3 text-white border">
                             <span class="far fa-user fa-sm text-dark"></span>
                         </div>
-                        <label class="font-weight-bold m-0">User Custom Details</label>
+                        <label class="font-weight-bold m-0">Attributes</label>
                     </div>
                     <button type="button" class="btn btn-link" (click)="manageUserAttribute()">
                         <span class="fa fa-plus mr-2"></span>
